--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,23 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pydantic = "^2.7"
+pydantic-settings = "^2.2"
+python-dotenv = "^1.0"
+polygon-api-client = "^1.13"
+yfinance = "^0.2"
+pandas = "^2.2"
+httpx = "^0.27"
+sendgrid = "^6.11"
+python-pushover = "^0.4"
+anthropic = "^0.25"
+langgraph = "^0.2"
+langgraph-checkpoint-sqlite = "^2.0"
+mcp = "^1.0"
+gradio = "^4.36"
+plotly = "^5.22"
+click = "^8.1"
+rich = "^13.7"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0"
