--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
+POLYGON_API_KEY=
+SERPER_API_KEY=
+BRAVE_API_KEY=
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=
+NOTIFICATION_EMAIL=
+PUSHOVER_USER_KEY=
+PUSHOVER_API_TOKEN=
 OPENAI_API_KEY=your_openai_api_key
-PUSHOVER_USER_KEY=your_pushover_user_key_here
-PUSHOVER_API_TOKEN=your_pushover_app_token_here
-SENDGRID_API_KEY=your_sendgrid_api_key_here
-SERPER_API_KEY=your_serper_api_key_here
-BRAVE_API_KEY=your_brave_api_key_here
-POLYGON_API_KEY=your_polygon_api_key_here
-DB_PATH=data/momentum_assistant.db
-GRADIO_SERVER_PORT=7860
-GRADIO_SHARE=false
-LOOKBACK_MONTHS=12
-SKIP_MONTHS=1
-MONTHLY_CONTRIBUTION_PLN=1000.0
+OPENAI_MODEL=gpt-4o
+DB_PATH=data/momentum.db
+GRADIO_PORT=7860
+LOG_LEVEL=INFO
