--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,9 @@
 name = "gem-strategy-assistant"
 version = "0.1.0"
 description = "Semi-automated GEM ETF investment assistant with MCP"
-authors = ["Szymon Maciejewski<szymon.maciejewski.programista@gmail.com>"]
+authors = ["Szymon Maciejewski <szymon.maciejewski.programista@gmail.com>"]
 readme = "README.md"
+packages = [{include = "momentum_assistant", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
@@ -15,7 +16,7 @@ yfinance = "^0.2"
 pandas = "^2.2"
 httpx = "^0.27"
 sendgrid = "^6.11"
-python-pushover = "^0.4"
+# python-pushover = "^0.4"
 anthropic = "^0.25"
 langgraph = "^0.2"
 langgraph-checkpoint-sqlite = "^2.0"
@@ -46,6 +47,9 @@ strict = true
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.extras]
+python-pushover = ["python-pushover"]
 
 [tool.poetry.scripts]
 momentum = "gem_strategy_assistant.presentation.cli:cli"
