--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pydantic-settings = "^2.2"
 python-dotenv = "^1.0"
 polygon-api-client = "^1.13"
 yfinance = "^0.2"
+websockets = "^13.0"
 pandas = "^2.2"
 httpx = "^0.27"
 sendgrid = "^6.11"
@@ -21,7 +22,7 @@ anthropic = "^0.25"
 langgraph = "^0.2"
 langgraph-checkpoint-sqlite = "^2.0"
 mcp = "^1.0"
-gradio = "^4.36"
+gradio = "^5.0"
 plotly = "^5.22"
 click = "^8.1"
 rich = "^13.7"
